# timeflow

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 557015c3d189_initial_schema_8_core_tables.py  a1b2c3d4e5f6_add_task_estimated_duration.py  da462b50d7e8_add_user_utc_offset.py  f63fd21f1343_add_user_planner_settings.py
backend/app/: main.py
backend/app/ai/: client.py  router.py
backend/app/analytics/: models.py  router.py
backend/app/auth/: router.py  schemas.py
backend/app/categories/: models.py  router.py  schemas.py  seed.py
backend/app/core/: config.py  deps.py  enums.py  security.py  timezones.py
backend/app/dashboard/: router.py
backend/app/db/: all_models.py  session.py  types.py
backend/app/gamification/: models.py
backend/app/integrations/google/: calendar.py  models.py  oauth.py  router.py
backend/app/recommendations/: router.py
backend/app/tasks/: models.py  router.py  schemas.py
backend/app/telegram/: bot.py  link_tokens.py  models.py  parse_quick_add.py  router.py
backend/app/users/: energy_zones.py  models.py  router.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_dashboard_tz.py  test_parser.py  test_tasks.py  test_telegram_bot_init.py  test_timezones.py
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  tma.html  vite.config.ts
frontend/src/: main.tsx
src/app/: App.module.css  App.tsx  store.ts
(+214 files in other folders)
