[project]
name = "timeflow-backend"
version = "0.1.0"
description = "TimeFlow backend — FastAPI + PostgreSQL"
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "Mikhail Polunin", email = "poluninmisa140@gmail.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",

    # DB
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",

    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",

    # HTTP client (Claude, Google)
    "httpx>=0.28.0",

    # Telegram bot
    "aiogram>=3.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
